--- a/app/src/main/res/layout-land/fragment_home.xml
+++ b/app/src/main/res/layout-land/fragment_home.xml
@@ -20,7 +20,7 @@
             android:minHeight="?attr/actionBarSize"
             app:layout_collapseMode="pin"
             app:menu="@menu/fragment_home_toolbar"
-            app:title="@string/home_title" />
+            app:title="@string/fragment_home_title" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -44,7 +44,7 @@
                 style="@style/Widget.Material3.Button.Icon"
                 android:layout_width="match_parent"
                 android:layout_height="64dip"
-                android:text="@string/home_button_play"
+                android:text="@string/fragment_home_button_play"
                 app:icon="@drawable/ic_sports_esports_24px" />
 
             <Button
@@ -53,7 +53,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:text="@string/home_button_records"
+                android:text="@string/fragment_home_button_records"
                 app:icon="@drawable/ic_overview_24px" />
 
         </LinearLayout>
