--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -5,13 +5,15 @@
 
     <PreferenceCategory
         android:title="@string/preferences_category_appearance_title"
-        app:iconSpaceReserved="false"
-        android:fontFamily="@font/montserrat">
+        app:iconSpaceReserved="false">
 
         <ListPreference
             android:key="@string/preference_language"
             android:title="@string/preference_language_title"
-            app:iconSpaceReserved="false" />
+            app:entries="@array/preference_language_entries"
+            app:entryValues="@array/preference_language_values"
+            app:iconSpaceReserved="false"
+            app:useSimpleSummaryProvider="true" />
 
         <ListPreference
             android:key="@string/preference_theme"
