--- a/app/src/main/res/layout/adapter_record.xml
+++ b/app/src/main/res/layout/adapter_record.xml
@@ -7,11 +7,11 @@
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
     android:minHeight="?android:attr/listPreferredItemHeight"
-    android:orientation="vertical"
     android:mode="twoLine"
+    android:orientation="vertical"
     android:paddingStart="?android:attr/listPreferredItemPaddingStart"
     android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
-    tools:context=".ui.records.RecordAdapter">
+    tools:context=".ui.records.RecordsAdapter">
 
     <LinearLayout
         android:id="@+id/adapter_record_datetime_wrapper"
@@ -20,9 +20,9 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:layout_marginStart="-4dp"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:layout_marginStart="-4dp"
             android:adjustViewBounds="true"
             android:scaleType="fitCenter"
             app:srcCompat="@drawable/ic_calendar_today_24px" />
@@ -31,8 +31,8 @@
             android:id="@+id/adapter_record_text_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="2025-06-07"
-            android:textAppearance="?android:attr/textAppearanceListItemSecondary" />
+            android:textAppearance="?android:attr/textAppearanceListItemSecondary"
+            tools:text="2025-06-07" />
 
         <ImageView
             android:layout_width="wrap_content"
@@ -45,8 +45,8 @@
             android:id="@+id/adapter_record_text_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="00:10"
-            android:textAppearance="?android:attr/textAppearanceListItemSecondary" />
+            android:textAppearance="?android:attr/textAppearanceListItemSecondary"
+            tools:text="17:38:20" />
 
     </LinearLayout>
 
@@ -54,10 +54,10 @@
         android:id="@+id/adapter_record_text_result"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
         android:layout_below="@id/adapter_record_datetime_wrapper"
-        android:text="You lost to Opponent in 5 rounds."
+        android:layout_marginTop="4dp"
+        android:fontFamily="@font/montserrat"
         android:textAppearance="?android:attr/textAppearanceListItem"
-        android:fontFamily="@font/montserrat" />
+        tools:text="You defeated %1$s in %2$s rounds." />
 
 </TwoLineListItem>
