--- a/app/src/main/res/layout/view_hands.xml
+++ b/app/src/main/res/layout/view_hands.xml
@@ -10,14 +10,14 @@
 
     <ImageView
         android:id="@+id/view_hands_image_left"
-        android:layout_width="128dp"
-        android:layout_height="128dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:srcCompat="@drawable/ic_hand_closed_left" />
 
     <ImageView
         android:id="@+id/view_hands_image_right"
-        android:layout_width="128dp"
-        android:layout_height="128dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         app:srcCompat="@drawable/ic_hand_closed_right" />
 
