--- a/app/src/main/res/values/attrs_view_hands.xml
+++ b/app/src/main/res/values/attrs_view_hands.xml
@@ -1,8 +1,5 @@
 <resources>
     <declare-styleable name="HandsView">
-        <attr name="exampleString" format="string" />
-        <attr name="exampleDimension" format="dimension" />
-        <attr name="exampleColor" format="color" />
-        <attr name="exampleDrawable" format="color|reference" />
+        <attr name="iconSize" format="dimension" />
     </declare-styleable>
 </resources>
