--- a/app/src/main/res/layout-land/fragment_game_choices.xml
+++ b/app/src/main/res/layout-land/fragment_game_choices.xml
@@ -52,21 +52,17 @@
                     style="@style/Theme.FifteenTwenty.Button.HandButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:checkable="true"
                     android:text="@string/fragment_game_choices_button_hand_left"
-                    app:icon="@drawable/sl_hand_left"
-                    app:iconTint="@null" />
+                    app:icon="@drawable/sl_hand_left" />
 
                 <Button
                     android:id="@+id/fragment_game_choices_button_hand_right"
                     style="@style/Theme.FifteenTwenty.Button.HandButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:checkable="true"
                     android:text="@string/fragment_game_choices_button_hand_right"
                     app:icon="@drawable/sl_hand_right"
-                    app:iconGravity="end"
-                    app:iconTint="@null" />
+                    app:iconGravity="end" />
 
             </com.google.android.material.button.MaterialButtonGroup>
 
@@ -119,6 +115,7 @@
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/fragment_game_choices_button_confirm"
+        style="?attr/floatingActionButtonLargeStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
