--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -84,7 +84,9 @@
 
     <style name="Theme.FifteenTwenty.Button.HandButton" parent="Widget.Material3.Button">
         <item name="android:paddingVertical">16dp</item>
+        <item name="android:checkable">true</item>
         <item name="iconSize">40dp</item>
+        <item name="iconTint">@null</item>
     </style>
 
     <style name="Preference.SwitchPreferenceCompat" parent="@style/Preference.SwitchPreferenceCompat.Material" tools:ignore="ResourceCycle">
