--- a/app/src/main/res/anim/slide_in_left.xml
+++ b/app/src/main/res/anim/slide_in_left.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<alpha
+<translate
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:interpolator="@android:interpolator/decelerate_quad"
-    android:fromAlpha="0.0"
-    android:toAlpha="1.0"
+    android:interpolator="@android:anim/decelerate_interpolator"
+    android:fromXDelta="-100%"
+    android:toXDelta="0%"
     android:duration="@android:integer/config_shortAnimTime" />
